display thumbnail for block all posts in single post psge

--- a/css/custom.css
+++ b/css/custom.css
@@ -62,3 +62,21 @@
 .cat-desc img.wp-post-image {
   max-width: 275px;
 }
+
+
+/* Block of post in single post page */
+.insert-posts {
+  border: 10px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 0 10px #ccc;
+}
+
+.insert-posts img {
+  margin: 0 20px 20px 0;
+  border: 5px solid #ccc;
+}
+
+.insert-posts a:hover img {
+  border-radius: 50%;
+  transition: border-radius 0.5s;
+}
